Added a Summary note and Schema to the remaining routes missing a schema to meet Rubric API DOCUMENTATION MASTERY requirement.
